# kuhhandel-ml

./: .gitattributes  .gitignore  Geld.py  Player.py  Readme.md  Spielwiese.ipynb  TRAINING_SETUP.md  Tier.py  debug_import.py  eval.py  flow-diagrams.md  gui_game.py  implementation_plan.md  main.py  ml.py  pyproject.toml  pytest.ini  reproduce_actions.py  spieler.py  task.md
.github/workflows/: ci.yml
aislop/: env.py  test_env.py  train.py
gameengine/: Animal.py  Money.py  ONBOARDING.md  Player.py  __init__.py  actions.py  agent.py  controller.py  game.py  main.py  rules.txt  rules2.txt
ipt/: kuhandel.sh  train_selfplay.py
itp/: job3980.0.out  job3981.0.out  job3982.0.out  job3983.0.out  job3985.0.out  job3988.0.out  job4008.0.out  job4009.0.out  job4014.0.out  kuhandel.sh  train_selfplay.py
itp/logs/: 0.monitor.csv  1.monitor.csv  10.monitor.csv  11.monitor.csv  12.monitor.csv  13.monitor.csv  14.monitor.csv  15.monitor.csv  16.monitor.csv  17.monitor.csv  18.monitor.csv  19.monitor.csv  2.monitor.csv  20.monitor.csv  21.monitor.csv  22.monitor.csv  23.monitor.csv  24.monitor.csv  (+14 more)
logs/: 0.monitor.csv  1.monitor.csv  10.monitor.csv  11.monitor.csv  12.monitor.csv  13.monitor.csv  14.monitor.csv  15.monitor.csv  2.monitor.csv  3.monitor.csv  4.monitor.csv  5.monitor.csv  6.monitor.csv  7.monitor.csv  8.monitor.csv  9.monitor.csv  monitor.csv
plots/: PPO_0.csv  PPO_1.csv  ep_rew_mean.py
rl/: chatti action wrapper.py  env.py  env_checker.py  evaluate.py  evaluate_winrate.py  model_agent.py  play.py  play_terminal.py  random_agent.py  rdm_schwaben_agent.py  rl_agent.py  schwaben_agent.py  single_gamelog.py  test_hering.py  train.py  train_selfplay.py  user_agent.py
tests/: demo_game.py  test_action_space.py  test_game.py  test_known_money.py
(+389 files in other folders)
