[project]
name = "kuhhandel-ml"
version = "0.1.0"
description = ""
authors = [
    {name = "Justin Gebert"},
    {name = "Florian Hering"},
    {name = "Nepomuk Aurich"}
]
readme = "README.md"
requires-python = ">=3.11, <3.15"
dependencies = [
    "torch (>=2.9.1,<3.0.0)",
    "numpy (>=2.3.5,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)"
]

[tool.poetry]
packages = [
    { include = "gameengine" }
]