[project]
name = "kuhhandel-ml"
version = "0.1.0"
description = ""
authors = [
    {name = "Justin Gebert"},
    {name = "Florian Hering"},
    {name = "Nepomuk Aurich"}
]
readme = "Readme.md"
requires-python = ">=3.11, <3.15"
dependencies = ["gymnasium (>=1.2.2,<2.0.0)", "stable-baselines3 (>=2.7.0,<3.0.0)", "sb3-contrib (>=2.7.0,<3.0.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
ml = [
    "torch (>=2.9.1,<3.0.0)",
    "numpy (>=2.3.5,<3.0.0)"
]

[tool.poetry]
packages = [
    { include = "gameengine" }
]